--- a/móduloB/EX002.html
+++ b/móduloB/EX002.html
@@ -16,7 +16,7 @@
 
     <script>
        var nome = window.prompt('Qual seu nome vagabunda?') //vai perguntar alguma coisa
-       window.alert('É um grande desprazer  em te conhecer, ' + nome) //concatenação
+       window.alert(`É um grande desprazer em te conhecer, ${nome}`) //concatenação
     </script>
 
 </body>
