--- a/móduloB/EX004.html
+++ b/móduloB/EX004.html
@@ -13,7 +13,8 @@
         var nome = window.prompt('Qual é seu nome, viada?')
         document.write(`Olá, ${nome}. A merda do teu nome tem ${nome.length} letras! rsrs</br>`) 
         document.write(`Seu nome em maiúsculo é ${nome.toUpperCase()}</br>`)
-        document.write(`seu nome em minusculo é ${nome.toLowerCase()}`)
+        document.write(`seu nome em minusculo é ${nome.toLowerCase()}</br>`)
+        document.write('Muito útil essa porcaria neh >:(')
     </script>
 </body>
 </html> 
