--- a/móduloC/EX005.html
+++ b/móduloC/EX005.html
@@ -7,7 +7,7 @@
     <title>Primeiros passos DOM</title>
     <style>
         body{
-            background-color: bisque;
+            background-color: black;
             color: white;
         }
 
@@ -17,15 +17,13 @@
 <body>
     <h1>Iniciando estudos DOM</h1>
     <p>Aqui vai o resultado</p>
+    <p>Aprendendo a usar <strong>DOM</strong> em java Script</p>
     <div id="msg">Clique em mim</div>
-    <p>Aprendendo a usar <strong>DOM</strong> em Java Script</p>
-
 
     <script>
-        var corpo = window.document.body
-        var p1 = window.document.getElementsByTagName('p')[1]
-        var d = window.document.getElementById('msg')
-        d.style.background = 'green'
+        var p1 = window.document.getElementsByTagName('p')[0]
+        window.document.write(`aqui ta escrito nessa porra ${p1.innerText}`)
+
 
     </script>
 </body>
