--- a/móduloE/EX016 copy/EXEX1.html
+++ b/móduloE/EX016 copy/EXEX1.html
@@ -5,33 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="EXEX1.css">
-    <title>Modelo de Exercícios</title>
+    <title>Super contador</title>
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos contar</h1>
 
     </header>
-
     <section>
-        <Div>
-            testando
-
+        <Div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="contar" onclick="contar()"></p>
         </Div>
-        <div>
-
+        <div id="res">
+            Preparando a contagem
 
         </div>
 
 
     </section>
-
     <footer>
         <p>&copy; Curso em vídeo</p>
-
-
-    </footer>
-    
+    </footer>    
 
     <script src="script.js"></script>
 </body>
