--- a/móduloE/EX017/EXEX1.html
+++ b/móduloE/EX017/EXEX1.html
@@ -9,29 +9,27 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
-
+        <h1>Tabuada</h1>
     </header>
-
     <section>
         <Div>
-            testando
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar tabuada" onclick="tabuada()"></p>
 
         </Div>
         <div>
-
-
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
 
 
     </section>
-
     <footer>
         <p>&copy; Curso em vídeo</p>
 
 
     </footer>
-    
 
     <script src="script.js"></script>
 </body>
