--- a/Treinamento/SlaAinda.html
+++ b/Treinamento/SlaAinda.html
@@ -26,6 +26,11 @@
             position: absolute;
             top: 75px;
             left: 75px;
+            transition: transform 0.1s ease;
+        }
+
+        div#container-child:hover{
+            transform: scale(1.2)
         }
 
 
