--- a/Treinamento/formObjeto.html
+++ b/Treinamento/formObjeto.html
@@ -34,7 +34,7 @@
                 second:"2-digit"
             }).format(agora)
             horas.innerHTML = IntlHora
-            setTimeout('hora()', 500)
+            setTimeout(hora, 500)
         }
 
 
