--- a/Udemy/007_Refresh_e_Redirect/index.html
+++ b/Udemy/007_Refresh_e_Redirect/index.html
@@ -11,7 +11,7 @@
 
     <button onclick="window.location.href='https://google.com'">Ir ao Google.com</button>
 
-    <button>Atualizar a página</button>
+    <button onclick="window.location.reload()">Atualizar a página</button>
 
     <script src="script.js"></script>
 </body>
